--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#CBD4FF</color>
+    <color name="colorPrimaryDark">#2979FF</color>
+    <color name="colorAccent">#00B0FF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#666666</color>
+    <color name="bluewhite">#E2FCFF</color>
 </resources>
