--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#CBD4FF</color>
-    <color name="colorPrimaryDark">#2979FF</color>
-    <color name="colorAccent">#00B0FF</color>
+    <color name="colorPrimary">#335CC5</color>
+    <color name="colorPrimaryDark">#5C2774</color>
+    <color name="colorAccent">#637FFD</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#666666</color>
     <color name="bluewhite">#E2FCFF</color>
+    <color name="grey">#95989A</color>
 </resources>
