--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -50,7 +50,7 @@
             android:drawablePadding="10dp"
             android:ems="10"
             android:fontFamily="@font/montserrat"
-            android:hint="Input your username here"
+            android:hint="@string/input_your_username_here"
             android:inputType="none|textPersonName"
             android:paddingBottom="20dp"
             android:textColor="@android:color/black" />
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:text="Password"
+            android:text="@string/password"
             android:textColor="@color/colorPrimary" />
 
         <EditText
@@ -76,7 +76,8 @@
             android:hint="Please input your password here..."
             android:inputType="textPassword"
             android:paddingBottom="20dp"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:autofillHints="" />
 
         <Button
             android:id="@+id/btnSignIn"
