--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#666666</color>
     <color name="bluewhite">#E2FCFF</color>
     <color name="grey">#95989A</color>
+    <color name="greyWhite">#F4F4F4</color>
 </resources>
