--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:text="User name /Email"
+            android:text="Email"
             android:textColor="@color/colorPrimary" />
 
         <EditText
