--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -47,9 +47,9 @@
                 android:fontFamily="@font/montserrat"
                 android:padding="10dp"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -61,10 +61,6 @@
                 android:fontFamily="@font/montserrat"
                 android:padding="10dp"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
@@ -75,9 +71,6 @@
                 android:fontFamily="@font/montserrat"
                 android:padding="10dp"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
         </LinearLayout>
 
     </ScrollView>
