--- a/app/src/main/res/layout/project_dialog.xml
+++ b/app/src/main/res/layout/project_dialog.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="350dp"
-    android:layout_height="270dp"
-    android:layout_gravity="center"
-    android:background="@color/white">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/space_background_color">
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="350dp"
+        android:layout_height="270dp"
         app:cardCornerRadius="8dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="190dp"
         >
 
 
