--- a/app/src/main/res/layout/project_row.xml
+++ b/app/src/main/res/layout/project_row.xml
@@ -6,7 +6,8 @@
     android:orientation="horizontal"
     android:layout_marginBottom="20dp"
     android:layout_height="80dp"
-    android:paddingTop="3dp">
+    android:paddingTop="3dp"
+    android:layout_margin="20dp">
 
 
     <LinearLayout
