--- a/app/src/main/res/layout/project_dialog.xml
+++ b/app/src/main/res/layout/project_dialog.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/space_background_color">
+    android:background="@color/greyTrans">
 
 
     <androidx.cardview.widget.CardView
