--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="darkPurple">#3D3A62</color>
     <color name="yellow">#F4CA8F</color>
     <color name="whiteGrey">#FDFDFD</color>
+    <color name="greyTrans">#8095989A</color>
 </resources>
